// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`request given single body param should translate to request with body 1`] = `
Object {
  "body": Object {
    "contents": Array [
      Object {
        "examples": Array [],
        "id": Any<String>,
        "mediaType": "*",
      },
    ],
    "id": Any<String>,
    "name": "param",
  },
  "cookie": Array [],
  "headers": Array [],
  "path": Array [],
  "query": Array [],
}
`;

exports[`request given single form param should translate to request with form 1`] = `
Object {
  "body": Object {
    "contents": Array [
      Object {
        "id": Any<String>,
        "mediaType": "*",
        "schema": Object {
          "$schema": "http://json-schema.org/draft-07/schema#",
          "properties": Object {
            "param": Object {
              "type": "number",
            },
          },
          "type": "object",
          "x-stoplight": Object {
            "id": Any<String>,
          },
        },
      },
    ],
    "id": Any<String>,
  },
  "cookie": Array [],
  "headers": Array [],
  "path": Array [],
  "query": Array [],
}
`;

exports[`request given single header param should translate to request with header 1`] = `
Object {
  "cookie": Array [],
  "headers": Array [
    Object {
      "id": Any<String>,
      "name": "param",
      "style": "simple",
    },
  ],
  "path": Array [],
  "query": Array [],
}
`;

exports[`request given single path param should translate to request with path 1`] = `
Object {
  "cookie": Array [],
  "headers": Array [],
  "path": Array [
    Object {
      "id": Any<String>,
      "name": "param",
      "required": true,
      "style": "simple",
    },
  ],
  "query": Array [],
}
`;

exports[`request given single query param should translate to request with query 1`] = `
Object {
  "cookie": Array [],
  "headers": Array [],
  "path": Array [],
  "query": Array [
    Object {
      "id": Any<String>,
      "name": "param",
      "style": "unspecified",
    },
  ],
}
`;

exports[`request given two header params should translate 1`] = `
Object {
  "cookie": Array [],
  "headers": Array [
    Object {
      "id": Any<String>,
      "name": "param",
      "style": "simple",
    },
  ],
  "path": Array [],
  "query": Array [],
}
`;

exports[`request given two path params should translate 1`] = `
Object {
  "cookie": Array [],
  "headers": Array [],
  "path": Array [
    Object {
      "id": Any<String>,
      "name": "param",
      "required": true,
      "style": "simple",
    },
  ],
  "query": Array [],
}
`;

exports[`request given two query params should translate 1`] = `
Object {
  "cookie": Array [],
  "headers": Array [],
  "path": Array [],
  "query": Array [
    Object {
      "id": Any<String>,
      "name": "param",
      "style": "unspecified",
    },
  ],
}
`;

exports[`request should translate mixed request 1`] = `
Object {
  "body": Object {
    "contents": Array [
      Object {
        "examples": Array [],
        "id": Any<String>,
        "mediaType": "*",
      },
    ],
    "id": Any<String>,
    "name": "param",
  },
  "cookie": Array [],
  "headers": Array [
    Object {
      "id": Any<String>,
      "name": "param",
      "style": "simple",
    },
  ],
  "path": Array [
    Object {
      "id": Any<String>,
      "name": "param",
      "required": true,
      "style": "simple",
    },
  ],
  "query": Array [
    Object {
      "id": Any<String>,
      "name": "param",
      "style": "unspecified",
    },
  ],
}
`;
